--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,85 +1,84 @@
 conky.config = {
-  alignment = 'top_right',
-  background = false,
-  border_width = 0.5,
-  cpu_avg_samples = 4,
-  default_color = 'white',
-  default_outline_color = 'grey',
-  default_shade_color = 'black',
-  draw_borders = true,
-  draw_graph_borders = true,
-  draw_outline = false,
-  draw_shades = false,
-  use_xft = true,
-  font = 'DejaVu Sans Mono:size=10',
-  gap_x = 30,
-  gap_y = 60,
-  maximum_width = 200,
-  minimum_height = 5,
-  minimum_width = 5,
-  net_avg_samples = 2,
-  double_buffer = true,
-  out_to_console = false,
-  out_to_stderr = false,
-  extra_newline = false,
-  own_window = true,
-  own_window_colour = '000000',
-  own_window_class = 'Conky',
-  own_window_argb_visual = true,
-  own_window_type = 'dock',
-  own_window_transparent = true,
-  own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-  stippled_borders = 0,
-  update_interval = 1,
-  uppercase = false,
-  use_spacer = 'none',
-  show_graph_scale = false,
-  show_graph_range = false
+    alignment = 'top_right',
+    background = true,
+    border_width = 0.5,
+    cpu_avg_samples = 4,
+    default_color = 'white',
+    default_outline_color = 'grey',
+    default_shade_color = 'black',
+    draw_borders = true,
+    draw_graph_borders = true,
+    draw_outline = false,
+    draw_shades = false,
+    use_xft = true,
+    font = 'DejaVu Sans Mono:size=10',
+    gap_x = 30,
+    gap_y = 60,
+    maximum_width = 200,
+    minimum_height = 5,
+    minimum_width = 5,
+    net_avg_samples = 2,
+    double_buffer = true,
+    out_to_console = false,
+    out_to_stderr = false,
+    extra_newline = false,
+    own_window = true,
+    own_window_colour = '000000',
+    own_window_class = 'Conky',
+    own_window_argb_visual = true,
+    own_window_type = 'override',
+    own_window_transparent = true,
+    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+    stippled_borders = 0,
+    update_interval = 1,
+    uppercase = false,
+    use_spacer = 'none',
+    show_graph_scale = false,
+    show_graph_range = false
 }
 
 conky.text = [[
-  $color${font}${font Open Sans:size=44}$alignr${time %H:%M}$font$color${font Open Sans:size=15}
-  $alignr${time %a}, ${time %d %b %Y}$font$color
-  # luk3rr
-  ${font Open Sans:Bold:size=16}${color 4C7523} Luk3rr
-  # SYS
-  ${font Open Sans:Bold:size=10}${color 4C7523}SYSTEM ${hr 2}$color${font}${offset 1}
-  Kernel $alignr $kernel
-  Uptime $alignr $uptime
+    $color${font}${font Open Sans:style=Bold:size=34}$alignr${time %I:%M}$font ${time %p}$color${font Open Sans:size=13}
+    $alignr${time %a}, ${time %d %b %Y}$font$color
 
-  # Ryzen 5 3.400G 
-  ${font Open Sans:Bold:size=10}${color 4C7523} Ryzen 5 3400G ${hr 2}$color${font}${offset 1}
-  $color${font}Usage $alignr $cpu %
-  Temperature $alignr ${exec sensors k10temp-pci-00c3 | grep 'Tdie' | cut -c16-19} °C
+# SYS
+    ${font Open Sans:Bold:size=10}${color 4C7523}SYSTEM ${hr 2}$color${font}${offset 1}
+    Kernel $alignr $kernel
+    Uptime $alignr $uptime
 
-  # VEGA 11
-  ${font Open Sans:Bold:size=10}${color 4C7523} VEGA 11 ${hr 2}$color${font}${offset 1}
+# Ryzen 5 3.400G 
+    ${font Open Sans:Bold:size=10}${color 4C7523}Ryzen 5 3400G ${hr 2}$color${font}${offset 1}
+    $color${font}CPU $alignr $freq_g GHz
+    Temperature $alignr ${exec sensors | grep -i CPU | cut -d '+' -f2 | cut -c1-2}ºC
+    FAN $alignr ${exec sensors | grep 'fan1' | cut -d ':' -f2}
+    $color${font}Usage $alignr $cpu %
+    ${cpugraph}
+# RAM
+    ${font Open Sans:Bold:size=10}${color 4C7523}RAM ${hr 2}$color${font}${offset 1}
+    ${memperc}% ${membar 4}
 
-  # Frequency $alignr ${nvidia gpufreq} Mhz
-  # Memory $alignr ${nvidia memfreq} Mhz
-  Temperature $alignr ${exec sensors amdgpu-pci-0700 | grep 'edge' | cut -c16-19} °C
+# BATTERY
+    ${font Open Sans:Bold:size=10}${color 4C7523}BATTERY ${hr 2}$color${font}${offset 1}
+    ${color}${font}Battery 0 ${alignr}${battery_percent BAT0}% 
+    ${battery_bar BAT0}
+    ${color}${font}Battery 1 ${alignr}${battery_percent BAT1}%
+    ${battery_bar BAT1}
 
-  # RAM
-  ${font Open Sans:Bold:size=10}${color 4C7523}RAM ${hr 2}$color${font}${offset 1}
-  Total $alignr $memmax
-  In use $alignr $mem
-  Free $alignr $memeasyfree
-  Buffers $alignr $buffers
-  Cache $alignr $cached
-
-  # PROCESSES
-  ${font Open Sans:Bold:size=10}${color 4C7523}PROCESSES ${hr 2}$color${font}${offset 1}
-  $color${font Open Sans:bold:size=8}CPU$font
-  ${offset 15}${font Noto sans:size=8}${color EDE0FF}Name               ${alignr}PID   CPU%   MEM%
-  ${offset 15}${color FF7878}${top name 1} ${alignr}${top pid 1} ${top cpu 1} ${top mem 1}
-  ${offset 15}${color FF7878}${top name 2} ${alignr}${top pid 2} ${top cpu 2} ${top mem 2}
-  ${offset 15}${color FF7878}${top name 3} ${alignr}${top pid 3} ${top cpu 3} ${top mem 3}
-  ${offset 15}${color FF7878}${top name 4} ${alignr}${top pid 4} ${top cpu 4} ${top mem 4}
-
-  # SSD M.2 2280 240G
-  ${font Open Sans:Bold:size=10}${color 4C7523} SSD M.2 2280 240GiB ${hr 2}$color${font}${offset 1}
-  ${offset 4}${color FFFDE2}home (${fs_type /home}) $color${fs_bar 4 /home/}
-  ${offset 4}Total: ${fs_size /home/}
-  ${offset 4}Free: ${fs_free /home/}
-  ${offset 4}Used: ${fs_used /home/}
-]]
+#  WIFI
+    ${font Open Sans:Bold:size=10}${color 4C7523}WIFI ${hr 2}$color${font}${offset 1}
+    Temperature $alignr ${exec sensors | grep 'temp1' | head -n1 | cut -d '+' -f2 | cut -c1-2}ºC
+    ${color}${font}Download ${alignr}${downspeed wlp3s0}
+    ${color}${font}Total ${alignr}${totaldown wlp3s0}
+    ${downspeedgraph wlp3s0}
+    ${color}${font}Upload ${alignr}${upspeed wlp3s0}
+    ${color}${font}Total ${alignr}${totalup wlp3s0}
+    ${upspeedgraph wlp3s0}
+# HOME
+    ${font Open Sans:Bold:size=10}${color 4C7523}HOME ${hr 2}$color${font}${offset 1}
+    ${color}${font}Western 240G $color${fs_bar /}
+    ${color}${font}Temperature ${alignr}${exec nc localhost 7634 | sed 's|C\||C\n|g' | grep sda | cut -d "|" -f4}ºC
+    ${color}${font}Write: ${alignr}${diskio_write /dev/sda}
+    ${diskiograph_write /dev/sda}
+    ${color}${font}Read: $alignr${diskio_read /dev/sda}
+    ${diskiograph_read /dev/sda}
+    ]]
