--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -5,6 +5,7 @@
 # inactive-opacity-override = false;
 opacity-rule = [
     "95:class_g = 'kitty'",
+    "95:class_g = 'calibre'",
     "95:class_g = 'Zathura'"
 ];
 
