--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -173,10 +173,10 @@ label-foreground = ${colors.foreground}
 #  󰥰  HEADPHONE BLUETOOTH
 exec = ~/.config/polybar/pulseaudio-control.sh --node-type output --icons-volume "󰋋 , 󰓃" --icons-muted "󰟎, 󰓄" --node-nicknames-from "device.description" --node-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:Speaker" --node-nickname "alsa_output.usb-Corsa_ir_Components_Corsair_HS60_Su_rround_Adapter_v0.1-00.analog-stereo:Headphone" listen
 click-right = exec pavucontrol &
-click-left = pulseaudio-control togmute
-click-middle = pulseaudio-control --node-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-node
-scroll-up = pulseaudio-control --volume-max 130 up
-scroll-down = pulseaudio-control --volume-max 130 down
+click-left = ~/.config/polybar/pulseaudio-control.sh togmute
+click-middle = ~/.config/polybar/pulseaudio-control.sh --node-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-node
+scroll-up = ~/.config/polybar/pulseaudio-control.sh --volume-max 130 up
+scroll-down = ~/.config/polybar/pulseaudio-control.sh --volume-max 130 down
 
 [module/pulseaudio-control-input]
 type = custom/script
@@ -187,10 +187,10 @@ label-foreground = ${colors.foreground}
 # Use --node-blacklist to remove the unwanted PulseAudio .monitor that are child of sinks
 exec = ~/.config/polybar/pulseaudio-control.sh  --node-type input --icons-volume "" --icons-muted "" --node-nickname "alsa_input.pci-0000_00_1f.3.analog-stereo:Native" --node-nickname "alsa_input.usb-Corsa_ir_Components_Corsair_HS60_Su_rround_Adapter_v0.1-00.mono-fallback:Headphone" --node-blacklist "*.monitor" listen
 click-right = exec pavucontrol &
-click-left = pulseaudio-control --node-type input togmute
-click-middle = pulseaudio-control --node-type input next-node
-scroll-up = pulseaudio-control --node-type input --volume-max 130 up
-scroll-down = pulseaudio-control --node-type input --volume-max 130 down
+click-left = ~/.config/polybar/pulseaudio-control.sh --node-type input togmute
+click-middle = ~/.config/polybar/pulseaudio-control.sh --node-type input next-node
+scroll-up = ~/.config/polybar/pulseaudio-control.sh --node-type input --volume-max 130 up
+scroll-down = ~/.config/polybar/pulseaudio-control.sh --node-type input --volume-max 130 down
 
 [module/filesystem]
 type = custom/script
