Update public dotfiles

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -68,13 +68,21 @@ conky.text = [[
 
 #  WIFI
     ${font Open Sans:Bold:size=10}${color 4C7523}WIFI ${hr 2}$color${font}${offset 1}
-    Temperature $alignr ${exec sensors | grep 'temp1' | head -n1 | cut -d '+' -f2 | cut -c1-2}ºC
-    ${color}${font}Download ${alignr}${downspeed wlp3s0}
-    ${color}${font}Total ${alignr}${totaldown wlp3s0}
-    ${downspeedgraph wlp3s0}
-    ${color}${font}Upload ${alignr}${upspeed wlp3s0}
-    ${color}${font}Total ${alignr}${totalup wlp3s0}
-    ${upspeedgraph wlp3s0}
+    Temperature $alignr ${exec sensors | grep "iwlwifi_1-virtual-0" -A 2 | awk '/temp1/ {print $2}' | sed 's/+//'}
+    ${color}${font}Download ${alignr}${downspeed wlan0}
+    ${color}${font}Total ${alignr}${totaldown wlan0}
+    ${downspeedgraph wlan0}
+    ${color}${font}Upload ${alignr}${upspeed wlan0}
+    ${color}${font}Total ${alignr}${totalup wlan0}
+    ${upspeedgraph wlan0}
+#  Ethernet
+    ${font Open Sans:Bold:size=10}${color 4C7523}Ethernet ${hr 2}$color${font}${offset 1}
+    ${color}${font}Download ${alignr}${downspeed enp0s31f6}
+    ${color}${font}Total ${alignr}${totaldown enp0s31f6}
+    ${downspeedgraph enp0s31f6}
+    ${color}${font}Upload ${alignr}${upspeed enp0s31f6}
+    ${color}${font}Total ${alignr}${totalup enp0s31f6}
+    ${upspeedgraph enp0s31f6}
 # HOME
     ${font Open Sans:Bold:size=10}${color 4C7523}HOME ${hr 2}$color${font}${offset 1}
     ${color}${font}Western 240G $color${fs_bar /}
