--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -61,6 +61,8 @@ module-margin-right = 2
 font-0 = fixed:pixelsize=10;1
 font-1 = FiraCode Nerd Font:style=Retina,Regular:pixelsize=11;3
 font-2 = Material Design Icons Desktop:style=Regular:pixelsize=11;3
+font-3 = fixed:pixelsize=10;1
+font-4 = Noto Emoji:scale=15:antialias=false;0
 
 ; separator = |
 ; separator-foreground = ${colors.disabled}
@@ -79,14 +81,14 @@ cursor-scroll = ns-resize
 [bar/main]
 inherit = section/base
 modules-left = archicon i3 player
-modules-center = date
-modules-right = pulseaudio-control-output pulseaudio-control-input xkeyboard memory cpu pacman pacman-update temperature bluetooth wlan eth battery
+modules-center = date pomodoro
+modules-right = pulseaudio-control-output pulseaudio-control-input xkeyboard memory cpu pacman-update temperature wlan eth battery
 
 [bar/secondary]
 inherit = section/base
 modules-left = archicon i3 player
 modules-center = date
-modules-right = pulseaudio-control-output pulseaudio-control-input filesystem xkeyboard memory cpu pacman pacman-update temperature bluetooth wlan eth battery
+modules-right = pulseaudio-control-output pulseaudio-control-input filesystem xkeyboard memory cpu pacman pacman-update temperature wlan eth battery
 
 ;; --------- MODULES ---------
 
@@ -134,19 +136,9 @@ label-urgent-padding = 2
 interval = 1
 type = custom/script
 format = <label>
-format-prefix = "懶  "
+format-prefix = "󰐎  "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = ~/.config/polybar/player.sh
-format-underline = ${colors.underline}
-
-
-[module/pomodoro]
-type = custom/script
-exec = i3-gnome-pomodoro status
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground-alt}
-interval = 1
-; override-redirect = true
 format-underline = ${colors.underline}
 
 
@@ -154,11 +146,25 @@ format-underline = ${colors.underline}
 type = custom/script
 interval = 1
 format = <label>
-format-prefix = "   "
+format-prefix = "󰸘  "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = date '+%a, %b %d, %I:%M %p'
 format-underline = ${colors.underline}
 
+[module/pomodoro]
+type = custom/script
+exec = python3 -m polybar-pomo
+
+tail = true
+label = %output%
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = ${colors.underline}
+
+click-left = python3 -m pomo toggle
+click-right = python3 -m pomo end
+click-middle = python3 -m pomo lock
+scroll-up = python3 -m pomo time +60
+scroll-down = python3 -m pomo time -60
 
 [module/pulseaudio-control-output]
 type = custom/script
@@ -171,7 +177,7 @@ label-foreground = ${colors.foreground}
 # trouble-free but repetitive, or apply only the relevant ones (for example
 # --node-blacklist is only needed for next-node).
 #  󰥰  HEADPHONE BLUETOOTH
-exec = ~/.config/polybar/pulseaudio-control.sh --node-type output --icons-volume "󰋋 , 󰓃" --icons-muted "󰟎, 󰓄" --node-nicknames-from "device.description" --node-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:Speaker" --node-nickname "alsa_output.usb-Corsa_ir_Components_Corsair_HS60_Su_rround_Adapter_v0.1-00.analog-stereo:Headphone" listen
+exec = ~/.config/polybar/pulseaudio-control.sh --node-type output --icons-volume "󰋋, 󰓃, 󰂰" --icons-muted "󰟎, 󰓄, 󰂲" --node-nicknames-from "device.description" --node-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:Speaker" --node-nickname "alsa_output.usb-Corsa_ir_Components_Corsair_HS60_Su_rround_Adapter_v0.1-00.analog-stereo:Headphone" --node-nickname "bluez_sink.FC_E8_06_25_F7_96.a2dp_sink:EDIFIER TWS1 Pro" listen
 click-right = exec pavucontrol &
 click-left = ~/.config/polybar/pulseaudio-control.sh togmute
 click-middle = ~/.config/polybar/pulseaudio-control.sh --node-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-node
@@ -196,7 +202,7 @@ scroll-down = ~/.config/polybar/pulseaudio-control.sh --node-type input --volume
 type = custom/script
 interval = 60
 format =  <label>
-format-prefix = "  "
+format-prefix = "󰋊 "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = ~/.config/polybar/drives.sh
 format-underline = ${colors.underline}
@@ -205,7 +211,7 @@ format-underline = ${colors.underline}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-format-prefix = "  "
+format-prefix = "󰌓  "
 format-prefix-foreground = ${colors.foreground-alt}
 label-layout = %layout%
 label-indicator-padding = 2
@@ -218,7 +224,7 @@ format-underline = ${colors.underline}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
+format-prefix = "󰍛  "
 format-prefix-foreground = ${colors.foreground-alt}
 label = %percentage_used%%
 #label = %gb_used%/%gb_total%
@@ -238,7 +244,7 @@ format-underline = ${colors.underline}
 interval = 3
 type = custom/script
 format = <label>
-format-prefix = "   "
+format-prefix = "󰏈   "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = sensors | grep -i CPU | head -n1 | sed -r 's/.*:\s+[\+-]?(.*C)\s+.*/\1/'
 format-underline = ${colors.underline}
@@ -260,7 +266,7 @@ exec = pacman -Qu | wc -l
 exec-if = "[ $(pacman -Qu | wc -l) -gt 0 ]"
 interval = 20
 format =  <label>
-format-prefix = "  "
+format-prefix = "󰏔  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.underline}
 
@@ -278,7 +284,8 @@ format-underline = ${colors.underline}
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+; interface = wlp3s0
+interface = wlan0
 interval = 3.0
 format-connected-prefix = "   "
 format-connected-prefix-foreground = ${colors.foreground-alt}
@@ -291,7 +298,7 @@ format-connected-underline = ${colors.underline}
 type = internal/network
 interface = enp0s31f6
 interval = 3.0
-format-connected-prefix = "  "
+format-connected-prefix = "󰈀  "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 format-disconnected =
