--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,7 +15,8 @@ box_drawing_scale 0.001, 1, 1.5, 2
 #: The cursor shape can be one of (block, beam, underline)
 cursor_shape beam
 
-#cursor_blink_interval 1
+# 0 disable blinking
+cursor_blink_interval 0
 
 #: }}}
 
